# matrix-digital-rain

./: .clang-format  .gitignore  Makefile.am  README.md  configure.ac
src/: main.c
