AC_PREREQ([2.71])
AC_INIT([matrix],[0.0.1],[sadeep@asciimx.com])
AC_CONFIG_AUX_DIR([build])
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AM_PROG_AR

LT_INIT

AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
